--- a/_drafts/index.html
+++ b/_drafts/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+    <link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="/stylesheets/pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="/stylesheets/print.css" media="print" />
 
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -28,30 +28,32 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <p>This wiki is about statistics as ecologists use them.  There are many methods to choose from in ecology, and the choice can be bewildering for many young ecologists.  Linear mixed models seem particularly difficult to design, interpret, and report.  </p>
+<h1 id='ecostats'>Ecostats</h1>
+
+<p>An exploration of GLM, random effects and mixed-effects, from the point of view of (a) young ecologist(s)</p>
+
+<p>This wiki is about statistics as ecologists use them. There are many methods to choose from in ecology, and the choice can be bewildering for many young ecologists. Linear mixed models seem particularly difficult to design, interpret, and report.</p>
 
 <p>Some things I hope we can accomplish:</p>
 
 <ul>
-<li>
-<em>how</em> linear mixed models function</li>
-<li>
-<em>when</em> to use them, when to ignore them</li>
-<li>
-<em>which</em> test to use (perhaps as a key?)</li>
-<li>
-<em>comparison</em> of various R packages for fitting these models</li>
-<li>
-<em>simulation</em> of analysis</li>
-<li>
-<em>worked examples</em> of correct analysis</li>
-<li>
-<em>advice</em> on proper reporting of results</li>
-<li>
-<p><em>references!</em> There are a great many books on the topic and web resources.  I'd like to keep an organized list of these.</p>
+<li><em>how</em> linear mixed models function</li>
 
-</li>
+<li><em>when</em> to use them, when to ignore them</li>
+
+<li><em>which</em> test to use (perhaps as a key?)</li>
+
+<li><em>comparison</em> of various R packages for fitting these models</li>
+
+<li><em>simulation</em> of analysis</li>
+
+<li><em>worked examples</em> of correct analysis</li>
+
+<li><em>advice</em> on proper reporting of results</li>
+
+<li><em>references</em> There are a great many books on the topic and web resources. I&#8217;d like to keep an organized list of these.</li>
 </ul>
+
         </section>
 
         <aside id="sidebar">
